NAC-01 [FIX] loading z-index y nueva version

--- a/projects/npx-arc-ui/loading/loading.component.css
+++ b/projects/npx-arc-ui/loading/loading.component.css
@@ -171,6 +171,7 @@
     background: rgba(0, 0, 0, 0.85);
     top: 0;
     left: 0;
+    z-index: 999999;
 }
 .contenedor-loading .loading {
     position: fixed;
